Smaller image for sbt-docker dind