@@ -1,31 +1,11 @@
-FROM jpetazzo/dind
+FROM docker:dind
 
-ENV SCALA_VERSION 2.11.8
 ENV SBT_VERSION 0.13.11
-ENV SBT_OPTS -Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=257M
-ENV LOG=file
+ENV SBT_HOME /usr/local/sbt
+ENV PATH ${PATH}:${SBT_HOME}/bin
 
-RUN curl -sSL https://get.docker.com/ | sh && \
-    apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y docker-engine && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# Install sbt
+RUN curl -sL "http://dl.bintray.com/sbt/native-packages/sbt/$SBT_VERSION/sbt-$SBT_VERSION.tgz" | gunzip | tar -x -C /usr/local && \
+    echo -ne "- with sbt $SBT_VERSION\n" >> /root/.built
 
-RUN curl -s -L https://github.com/docker/compose/releases/latest | \
-    egrep -o '/docker/compose/releases/download/[0-9.]*/docker-compose-Linux-x86_64' | \
-    wget --base=http://github.com/ -i - -O /usr/local/bin/docker-compose && \
-    chmod +x /usr/local/bin/docker-compose && \
-    /usr/local/bin/docker-compose --version
-
-RUN \
-  curl -L -o sbt-$SBT_VERSION.deb http://dl.bintray.com/sbt/debian/sbt-$SBT_VERSION.deb && \
-  dpkg -i sbt-$SBT_VERSION.deb && \
-  rm sbt-$SBT_VERSION.deb && \
-  apt-get update && \
-  apt-get install sbt && \
-  sbt sbtVersion
-
-ENTRYPOINT ["wrapdocker"]
-
-CMD []
+WORKDIR /app
